--- a/deploy/complete/helm-chart/setup/values.yaml
+++ b/deploy/complete/helm-chart/setup/values.yaml
@@ -102,16 +102,16 @@ grafana:
   grafana.ini:
     server:
       root_url: "%(protocol)s://%(domain)s:%(http_port)s/grafana"
-    plugins:
-      allow_loading_unsigned_plugins: "oci-datasource"
   persistence:
     enabled: true
   plugins:
-    - oci-datasource
+    - oci-logs-datasource
+    - oci-metrics-datasource
     - grafana-kubernetes-app
     - grafana-worldmap-panel
     - grafana-piechart-panel
     - btplc-status-dot-panel
+    - grafana-github-datasource
 
 # https://github.com/helm/charts/blob/master/stable/jenkins/README.md
 jenkins:
