dashboards for helm chart for OCI metrics

--- a/deploy/complete/helm-chart/setup/values.yaml
+++ b/deploy/complete/helm-chart/setup/values.yaml
@@ -80,6 +80,14 @@ grafana:
         gnetId: 9614
         revision: 1
         datasource: Prometheus
+      oci-compute:
+        gnetId: 13596
+        revision: 1
+        datasource: Oracle Cloud Infrastructure Metrics
+      oci-oke:
+        gnetId: 13594
+        revision: 1
+        datasource: Oracle Cloud Infrastructure Metrics
   dashboardProviders:
     dashboardproviders.yaml:
       apiVersion: 1
