--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -162,10 +162,10 @@ variables:
   k8s_version:
     type: enum
     enum:
+    - "Latest"
     - "v1.19.7"
     - "v1.18.10"
     - "v1.17.13"
-    - "v1.16.15"
     title: "Kubernetes Version"
     description: "Kubernetes version installed on your master and worker nodes"
     required: true
